# GSOC2025_Constellation

./: Readme.md  meson.build
src/: chartview.cpp  chartview.h  main.cpp  mainwindow.cpp  mainwindow.h  meson.build
